# greeting-card-bot

./: .gitignore  README.md  pyproject.toml
src/: greeting_card.py  holidays.py
